Fix display of recipe on mobile

--- a/suggest/static/css/seasonally.css
+++ b/suggest/static/css/seasonally.css
@@ -26,28 +26,34 @@ h4  {
 @media only screen and (min-width:1281px) and (max-width:4000px){
 	/* hi-res laptops and desktops */
 	.recipe {width: 33.33%;}
+	.ingredients {width: 33.33%;}
 	}
 @media only screen and (min-width:1025px) and (max-width:1280px){
 	/* big landscape tablets, laptops, and desktops */ 
 	.recipe {width: 33.33%;}
+	.ingredients {width: 33.33%;}
 	}
 @media only screen and (min-width:961px) and (max-width:1024px){
 	/* tablet, landscape iPad, lo-res laptops ands desktops */ 
 	.recipe {width: 33.33%;}
+	.ingredients {width: 33.33%;}
 	}
 @media only screen and (min-width:641px) and (max-width:960px){
 	/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
 	.recipe {width: 33.33%;}
+	.ingredients {width: 33.33%;}
 	}
 @media only screen and (min-width:481px) and (max-width:640px){
 	/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
 	.recipe {width: 100%;}
+	.ingredients {width: 100%;}
 	#header {font-size: 75%;}
 	.months > p > span {font-size: 80%;}
 	}
 @media only screen and (min-width:1px) and (max-width:480px){
 	/* smartphones, iPhone, portrait 480x320 phones */
 	.recipe {width: 100%;}
+	.ingredients {width: 100%;}
 	#header {font-size: 45%;}
 	.months > p > span {font-size: 45%;}
 	.months > p {margin: 0px;}
